# lopolyn

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
src/: Lopolyn.cc  Lopolyn.h  buffer.cc  buffer.h  canvas.cc  canvas.h  render.cc  render.h  shader.hpp
src/filter/: gaussian.cc  gaussian.h
src/render/: shader.cc  shader.h
template/: index.html
template/css/: lopolyn.css
template/js/: handler.js
