CMAKE_MINIMUM_REQUIRED(VERSION 3.22)

PROJECT(Lopolyn)

SET(CMAKE_CXX_STANDARD 17)

FILE(GLOB TARGET src/*.cc)
FILE(GLOB TARGET_SUB_DIR src/**/*.cc)

ADD_EXECUTABLE(
    ${PROJECT_NAME}
    ${TARGET}
    ${TARGET_SUB_DIR}
)

SET_TARGET_PROPERTIES(
    ${PROJECT_NAME} PROPERTIES
    LINK_FLAGS "--bind -std=c++17 -O3 -sASSERTIONS=1 -sEXPORTED_RUNTIME_METHODS=cwrap -sALLOW_MEMORY_GROWTH=1"
)
